# autonomica

./: .gitconfig  .gitignore  .gitmessage  .pre-commit-config.yaml  AUTOMATED_DEPLOYMENT.md  AUTOMATED_DEPLOYMENT_GUIDE.md  AUTOMATED_ROLLBACK_GUIDE.md  BRANCHING_STRATEGY.md  CODE_QUALITY_FRAMEWORK.md  DEPLOYMENT_GUIDE.md  INTEGRATION_TESTING.md  MONITORING_AND_ALERTING_GUIDE.md  Makefile.production  Makefile.staging  STAGING_ENVIRONMENT.md  STAGING_SETUP_GUIDE.md  TESTING_AND_DEPLOYMENT_PIPELINE.md  TESTING_FRAMEWORK.md  docker-compose.production.yml  docker-compose.staging.yml  production.env  quick_test_chat.sh  security-report.md  staging.env  start_autonomica.sh  stop_autonomica.sh  test_auth_simple.py  test_auth_standalone.py  test_auth_system.py  test_autonomica.sh  test_complete_auth.py  test_env_security.py  test_env_security_simple.py  test_error_simple.py  test_error_system.py  test_onboarding_system.py  test_security.py  test_tab_simple.py  test_tab_structure.py  usability-report.md
autonomica-api/: .coveragerc  .pre-commit-config.yaml  ENV_SETUP_GUIDE.md  Makefile  README.md  SEO_RESEARCH_README.md  USER_TRAINING.md  autonomica.db  docker-compose.ollama.yml  env.example  env.production.example  main_api.py  ollama-performance-dashboard.html  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-seo.txt  requirements.txt  run_analytics_tests.py  run_code_quality.py  run_integration_tests.py  security-report.md  server.out  setup_for_testing.py  simple_server.py  staging.config.py  test_analytics.py  test_analytics_system.py  test_api_endpoints.py  test_cache_service.py  test_caching.py  test_cli.py  test_complete_setup.py  test_config.py  test_config_system.py  test_content_generation.py  test_content_quality.py  test_content_repurposing.py  test_content_types_direct.py  test_content_types_simple.py  (+21 more)
autonomica-api/.taskmaster/ollama_config/: config.db
autonomica-api/.taskmaster/ollama_config/presets/: analysis.json  code_generation.json  conversation.json  creative_writing.json  summarization.json
autonomica-api/app/: database.py  main.py
autonomica-api/app/ai/: __init__.py  ai_manager.py  content_analytics.py  content_cli.py  content_generation.py  content_quality.py  content_repurposing.py  content_templates.py  content_types.py  content_types_simple.py  content_versioning.py  model_interface.py  ollama_config_manager.py  ollama_fine_tuning.py  ollama_model_library.py  ollama_parameter_optimizer.py  ollama_performance_monitor.py  performance_monitor.py
autonomica-api/app/ai/providers/: __init__.py  ollama_manager_enhanced.py  ollama_model.py  ollama_model_enhanced.py  openai_model.py  openrouter_model.py
autonomica-api/app/api/: analytics.py  content_management.py
autonomica-api/app/api/endpoints/: __init__.py  analytics.py  auth.py
autonomica-api/app/api/routes/: agent_management.py  agents.py  health.py  (+9 more)
autonomica-api/app/auth/: clerk_middleware.py  permission_decorator.py
autonomica-api/app/config/: seo_config.py
autonomica-api/app/core/: config.py  exceptions.py
autonomica-api/app/models/: __init__.py  schema.py
autonomica-api/app/owl/: agent.py  communication.py  error_handling.py  langchain_integration.py  monitoring.py  negotiation.py  orchestration.py  tasks.py  workforce.py  workforce_backup.py  workforce_simple.py
autonomica-api/app/services/: __init__.py  analytics_auth_service.py  analytics_data_collector.py  analytics_data_processor.py  analytics_performance_optimizer.py  analytics_service.py  auth_service.py  cache_service.py  competitor_analysis.py  content_analytics.py  content_generation.py  content_generation_standalone.py  content_lifecycle_manager.py  content_management.py  content_quality_checker.py  content_quality_orchestrator.py  content_reporting.py  content_repurposing.py  content_review_workflow.py  content_types.py  content_versioning.py  data_pipeline.py  data_privacy_service.py  database.py  keyword_analysis.py  keyword_analyzer.py  keyword_clustering.py  keyword_suggester.py  keyword_suggestion.py  kpi_calculation_engine.py  kpi_dashboard_service.py  langchain_content_generation.py  migrations.py  redis_service.py  report_generation_service.py  report_scheduler_service.py  semrush_client.py  seo_api_requirements.md  seo_cache_manager.py  seo_data_pipeline.py  (+12 more)
autonomica-api/app/static/: index.html  ollama_config_dashboard.html  ollama_dashboard.html  seo_dashboard.html  seo_research.html
autonomica-api/docs/: AGENT_ARCHITECTURE.md  AGENT_ROLES_SPECIFICATION.md  ANALYTICS_SYSTEM_README.md  API_Documentation.md  AUTHENTICATION.md  OLLAMA_DOCKER_INTEGRATION.md  OLLAMA_EXTENDED_MODEL_LIBRARY.md  OLLAMA_PERFORMANCE_MONITORING.md  SEO_API_INTEGRATION_REQUIREMENTS.md  SEO_DASHBOARD_README.md  SEO_DATA_PIPELINE.md  SEO_SERVICE_README.md  System_Overview.md  Training_Guide.md  User_Manual.md
autonomica-api/monitoring/prometheus/: prometheus.yml
autonomica-api/reports/html/: report_ReportType.DAILY_20250817_20250818_20250818_195059.html  report_ReportType.DAILY_20250817_20250818_20250818_195632.html  report_ReportType.DAILY_20250817_20250818_20250818_195827.html  report_ReportType.DAILY_20250817_20250818_20250818_200021.html  report_ReportType.DAILY_20250817_20250818_20250818_200135.html  report_ReportType.DAILY_20250817_20250818_20250818_210021.html  report_ReportType.WEEKLY_20250804_20250818_20250818_195059.html  report_ReportType.WEEKLY_20250804_20250818_20250818_210021.html
autonomica-api/scripts/: code-quality.sh  ollama-docker.sh
autonomica-api/tests/: conftest.py  test_analytics_load_testing.py  test_analytics_system.py  test_analytics_system_integration.py  test_cache_service.py  test_content_generation.py  test_content_lifecycle_manager.py  test_content_quality_checker.py  test_content_repurposing.py  test_content_types.py  test_content_versioning.py  test_keyword_suggestions.py  test_langchain_content_generation.py  test_seo_data_pipeline.py  test_seo_score_calculator.py  test_seo_service.py
autonomica-api/tests/integration/: conftest.py  test_api_endpoints.py  test_api_integration.py
(+190 files in other folders)
